<resources>
    <string name="app_name">Intigriti Robotics</string>

    <string name="title_activity_registration">Registration</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="register">Register</string>
    <string name="about_activity_title">About Us</string>
    <string name="about_activity_description"><b>Boost Your Brand and Company Image with Premium Online Printing Services from Us ! </b></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="domain">Domain</string>
    <string name="website">"www.website.com"</string>
    <string name="licence">License</string>
    <string name="licencedesc">Lorem Ipsum</string>
    <string name="changelog">Changelog</string>
    <string name="changes">Lorem Ipsum</string>
    <string name="login">Login</string>
    <string name="wishlist">Wishlist</string>
    <string name="forgot">Forgot Password</string>
    <string name="register_now">Register Now</string>
    <string name="already_mem">Already a member ? </string>
    <string name="login_now">Login Now</string>

    <!--Navigation drawer items-->
    <string name="home">Home</string>
    <string name="myprofile">Profile</string>
    <string name="myorders">My Orders</string>
    <string name="cart">Cart</string>
    <string name="logout">Logout</string>
    <string name="feedback">Feedback</string>
    <string name="aboutapp">About App</string>
    <string name="rate">Rate Us</string>
    <string name="helpcentre">Help Center</string>
    <string name="noconnection">Kindly connect to a WIFI network or enable Mobile Data</string>
    <string name="help">In case of any query feel free to reach us at : \n    beingdev.com@gmail.com\n\nYou can also Call us at our helpline numbers : \n     +91&#8211;9291299322 \n     +91&#8211;8732883291</string>
    <string name="magic_points">Magic Points</string>
    <string name="orders_placed">Orders Placed</string>
    <string name="items_incart">Items inCart</string>
    <string name="my_profile">My Profile</string>
    <string name="update_details">Update Details</string>
    <string name="update">Update</string>
    <string name="send_otp">Send OTP</string>
    <string name="back">Back</string>

    <string name="send_password1">Here is your account password for Magic Print ! \n\n    Password :  </string>
    <string name="send_password2">\n\n Sorry to know that you forgot your password ! I guess it\'s the right time to get a memory booster !\n\n Just Joking ! No Offence Please !
    \n\n With Regards, \n Kshitij Singh \n (Magic Print)</string>
    <string name="select_category">Select Category</string>
    <string name="registermail1">\n This is Kshitij Singh , CEO of Magic Print ! \n\nWelcome onboard with us on behalf of our team !\n
    We promise to provide unforgettable shopping experience to you in future ! \n\n
    So What are you waiting for , start shopping and get best of our products right at your doorstep !
    \n\n
    We are happy to help you ! In case of any query contact us at our handles mentioned below !\n\n
    Phone : +91-7905022222\n
    Email : beingdevofficial@gmail.com\n
    Address : 424 Lorem Ipsum , Pune , Maharashtra ( 226025 )</string>
    <string name="title_activity_process_order">ProcessOrder</string>
    <string name="orderdetails">Your Order has been Placed Successfully. \n Here is your Unique Order Id !</string>


    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Exclusive Products</string>
    <string name="slide_1_desc">Get products which are unique and only available at our shops !</string>

    <string name="slide_2_title">Cheap Rates</string>
    <string name="slide_2_desc">Products at such an affordable rates !</string>

    <string name="slide_3_title">Hassle Free Payments</string>
    <string name="slide_3_desc">With various pay options , you can easily pay in a minute !</string>

    <string name="slide_4_title">Fast Delivery</string>
    <string name="slide_4_desc">Blazing fast order delivery within time !</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_main_home">MainHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_cart">Cart</string>
    <string name="action_search">Search</string>


    <string name="menu_e_store">E-Store</string>
    <string name="menu_category">Category</string>
    <string name="menu_offer">Offers for you</string>
    <string name="menu_my_order">My Orders</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_my_account">My account</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_support">Support</string>
    <string name="menu_bt_home">Back 2 Home</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="user_image">user image</string>
    <string name="user_s_courses">User\'s Courses</string>
    <string name="my_courses">My Courses</string>
    <string name="saved">Saved</string>
    <string name="saved_items">Saved Items</string>
    <string name="new_updates">New Updates</string>
    <string name="my_orders">My Orders</string>
    <string name="my_cart">My Cart</string>
    <string name="give_review">Give Review</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pricePlaceHolder">Rs XXX.XX</string>
    <string name="strikePricePlaceHolder">MRP:<strike>Rs YYY.YY</strike></string>
    <string name="MrpSavingText"><strike>Rs YYY.YY</strike></string>
    <string name="details">Details</string>
    <string name="random_details">Product Name:\n Specs:\n Other details</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="ratingPlaceHolder">6.9/5.0</string>
    <string name="star">star</string>
    <string name="productBriefPlaceHolder">Name: Product Name, Key features, and model details</string>
    <string name="ratings">Ratings</string>
    <string name="add_to_fav_button">Add to fav. button</string>
    <string name="in_stock">In Stock</string>
    <string name="ir_learn">IR Learn</string>
    <string name="delivery">Delivery</string>
    <string name="free">Free</string>
    <string name="check_out">Check out</string>
    <string name="total_price">Total Price</string>
    <string name="price_details">Price Details</string>
    <string name="price_delivery">Price Delivery</string>
    <string name="total_amount">Total Amount</string>
    <string name="you_saved_rs_xyz">You Saved Rs.XYZ/-</string>
    <string name="out_of_stock">Out of Stock</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="submit">Submit</string>
    <string name="nothing_to_show">Oops! Nothing to Show, Click to continue shopping >>></string>
    <string name="seller_address_placeholder">Gamotech * SURVEY NO. 38/2, 39 AND 40, JADIGENAHALLI HOBLI,KACHARAKANAHALLI VILLAGE, HOSAKOTE TALUK, Bengaluru (Bangalore) Urban Bangalore, Karnataka, 562114 IN
    </string>
    <string name="shipping_address_placeholder">Sumit sharma Iar institute of advance robotics, dehradun, Itbp road DEHRADUN, UTTARAKHAND, 248001 IN State/UT Code: 05</string>
    <string name="pan_placeholder">PAN No: HMWPS9374G</string>
    <string name="date_placeholder">Order Date: 01.01.2021</string>
    <string name="order_no_placeholder">Order No: 403&#8211;3490108&#8211;6101</string>
    <string name="tax_inv_placeholder">Tax Invoice/Bill of Supply/Cash Memo</string>
    <string name="original_for_recipient">(Original for Recipient)</string>
    <string name="sold_by">Sold By:</string>
    <string name="shipping_address">Shipping Address:</string>
    <string name="product_disc_placeholder">Alketron Dual Channel CL11 DDR3 RAM for Laptop 4GB 1600MHz SODIMM | B07MTPRKKP ( DDR3LAPTOP4GBRAM )</string>
    <string name="prod_title_placeholder">Arduino Uno R3 Micro controller , Getting started with arduino</string>
    <string name="your_rating_text">Your Rating</string>
    <string name="qty_placeholder">Qty:6</string>
    <string name="phone_number">Phone Number</string>
    <string name="state">State</string>
    <string name="pin">PIN</string>
    <string name="city">City</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="user">User</string>
    <string name="apply">Apply</string>
    <string name="view_all">View all</string>
    <string name="popular_bundles">#Popular Bundles</string>
    <string name="trending">#Trending</string>
    <string name="user_name">User Name</string>
    <string name="arduino">Arduino</string>
    <string name="courses">Courses</string>
    <string name="update_profile">Update Profile</string>
    <string name="favorite">Favorite</string>
    <string name="set_ting">Set ting</string>
    <string name="support">Support</string>
</resources>
