<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/nav_e_store"
            android:icon="@drawable/orders_icon"
            android:title="@string/menu_e_store" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/category_icon"
            android:title="@string/menu_category" />
        <item
            android:id="@+id/nav_offer"
            android:icon="@drawable/tag"
            android:title="@string/menu_offer" />
        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/orders"
            android:title="@string/my_orders" />
        <item
            android:id="@+id/nav_my_cart"
            android:icon="@drawable/cart"
            android:onClick="cart"
            android:title="@string/my_cart" />
        <item
            android:id="@+id/nav_my_account"
            android:icon="@drawable/profile"
            android:onClick="account"
            android:title="@string/menu_my_account" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/notification"
            android:title="@string/menu_notification" />

    </group>
    <item android:title="">

        <menu>

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_setting"
                    android:icon="@drawable/settings"
                    android:onClick="setting"
                    android:title="@string/menu_setting" />
                <item
                    android:id="@+id/nav_support"
                    android:icon="@drawable/helpccenter"
                    android:onClick="support"
                    android:title="@string/menu_support" />
                <item
                    android:id="@+id/nav_bt_home"
                    android:icon="@drawable/common_full_open_on_phone"
                    android:title="@string/menu_bt_home"
                    android:onClick="backToHome"/>
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/logout"
                    android:onClick="logout"
                    android:title="@string/menu_logout" />
            </group>
        </menu>
    </item>
</menu>