<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.intigritirobotics.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_category"
        android:name="com.example.intigritirobotics.ui.Category.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_offer"
        android:name="com.example.intigritirobotics.ui.offers.OfferFragment"
        android:label="@string/menu_offer"
        tools:layout="@layout/fragment_slideshow" />


    <fragment
        android:id="@+id/nav_notification"
        android:name="com.example.intigritirobotics.ui.Notification.NotificationFragment"
        android:label="@string/menu_notification"
        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/nav_my_orders"
        android:name="com.example.intigritirobotics.ui.MyOrders.MyOrdersFragment"
        android:label="@string/menu_my_order"
        tools:layout="@layout/fragment_my_orders" />


</navigation>