<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_marginVertical="5dp"
    android:padding="2dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="3dp">

    <TextView
        android:id="@+id/order_detail_product_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/prod_title_placeholder"
        android:textSize="18sp"
        android:textColor="#000000"
        android:fontFamily="@font/nunito_semibold"
        app:layout_constraintEnd_toStartOf="@+id/order_detail_product_pic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/order_detail_product_pic"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:civ_border_color="#000000"
        app:civ_border_width="1dp"
        app:layout_constraintBottom_toTopOf="@+id/divider10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/order_detail_product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:text="@string/pricePlaceHolder"
        android:textSize="22sp"
        android:textAppearance="@style/ToolbarTitle"
        android:textColor="#0E393E"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/order_detail_product_title"
        app:layout_constraintTop_toBottomOf="@+id/order_detail_product_title" />

    <TextView
        android:id="@+id/order_detail_product_qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/qty_placeholder"
        android:textSize="20sp"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintEnd_toStartOf="@+id/order_detail_product_pic"
        app:layout_constraintTop_toBottomOf="@+id/order_detail_product_title" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/your_rating_text"
        android:textSize="16sp"
        android:textColor="@color/gen_black"
        app:layout_constraintStart_toStartOf="@+id/order_detail_product_price"
        app:layout_constraintTop_toBottomOf="@+id/order_detail_product_price" />

    <View
        android:id="@+id/divider10"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <RatingBar
        android:id="@+id/order_detail_product_ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="2dp"
        android:stepSize="1"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:clickable="false"
        app:layout_constraintTop_toBottomOf="@+id/divider10" />
</androidx.constraintlayout.widget.ConstraintLayout>